# lyrics_search

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lyrics_search/: __init__.py  __main__.py  cli.py  contractions.py  defaults.py  filters.py  handlers.py  lyrics_search.py  normalize.py  playlister.py  utils.py
lyrics_search/apis/: lastfm.py  musixmatch.py  spotify.py
lyrics_search/backends/: musixmatch.py
lyrics_search/frontends/: spotify.py
